--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 	"version": "0.1.0",
 	"description": "use detain",
 	"license": "MIT",
-	"main": "./dist/detain.umd.js",
+	"main": "./dist/detain.js",
 	"module": "./dist/detain.es.js",
 	"scripts": {
 		"dev": "vite --port 5172 --host",
@@ -17,12 +17,6 @@
 	"files": [
 		"dist"
 	],
-	"exports": {
-		".": {
-			"import": "./dist/detain.es.js",
-			"require": "./dist/detain.umd.js"
-		}
-	},
 	"repository": {
 		"type": "git",
 		"url": "git+https://github.com/yorkblansh/detain.js.git"
