--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
 	"name": "detain",
-	"version": "0.1.1",
+	"version": "0.1.0",
 	"description": "use detain",
 	"license": "MIT",
 	"main": "./dist/detain.js",
-	"module": "./dist/detain.es.js",
 	"scripts": {
 		"dev": "vite --port 5172 --host",
 		"build": " vite build",
@@ -17,6 +16,12 @@
 	"files": [
 		"dist"
 	],
+	"exports": {
+		".": {
+			"import": "./dist/detain.js",
+			"require": "./dist/detain.js"
+		}
+	},
 	"repository": {
 		"type": "git",
 		"url": "git+https://github.com/yorkblansh/detain.js.git"
