refactor, moving, fix
moving, refactor:

/src - library source
/example - react example app
/lib - library builded code

fix: bug of resolving forst item in given array

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,11 +17,11 @@
 		"jsx": "react-jsx",
 		"baseUrl": ".",
 		"paths": {
-			"@detain.js": ["lib/detain.ts"]
+			"@detain": ["./src/detain.ts"]
 		},
 		"declaration": true,
 		"pretty": true
 	},
-	"include": ["./src", "./lib"],
+	"include": ["./example", "./src"],
 	"references": [{ "path": "./tsconfig.node.json" }]
 }
