--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,6 +1,9 @@
 version: '3.8'
 
 services:
+  node-18:
+    image: node:18
+
   detain:
     extra_hosts:
       - 'host.docker.internal:host-gateway'
