fix docker compose
upd path to dockerfile

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -11,7 +11,7 @@ services:
     container_name: detain-dev
     build:
       context: ./
-      dockerfile: ./Dockerfile.dev
+      dockerfile: ./Dockerfile
     ports:
       - 5174:5172
     volumes:
