--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "detain",
-	"version": "2.0.2",
+	"version": "3.0.0",
 	"description": "use detain",
 	"license": "MIT",
 	"main": "./lib/detain.js",
@@ -36,6 +36,7 @@
 		"react": ">=17.x"
 	},
 	"devDependencies": {
+		"@changesets/cli": "^2.27.1",
 		"@types/node": "20.10.5",
 		"@types/react": "18.2.45",
 		"@types/react-dom": "18.2.18",
