--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
 		"lint": "eslint src --ext ts,tsx",
 		"lint:fix": "yarn lint --fix",
 		"type-check": "tsc --project tsconfig.json --pretty --noEmit",
-		"ci": "yarn lint && yarn type-check"
+		"ci": "yarn lint && yarn type-check",
+		"release": "yarn run build && npm publish"
 	},
 	"files": [
 		"lib"
